Closed Bug 1815415 Opened 1 year ago Closed 1 year ago

Parallel marking thread count parameter doesn't work correctly

Categories

(Core :: JavaScript: GC, defect, P3)

defect

Tracking

()

RESOLVED FIXED
111 Branch
Tracking Status
firefox111 --- fixed

People

(Reporter: jonco, Assigned: jonco)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

The GC parameter to control the number of threads used for parallel marking (added in bug 1812268) is broken for two reasons: it doesn't increase the maximum number of threads used for GC tasks and it doesn't increase the size of the shell thread pool as required. This means that you may not get the number of threads requested by setting this parameter.

This is complicated because we have two thread count values here, because we
want to be able to change the marking thread count for experiments without
changing anything else.

The patch refactors thread related GC parameters into their own set/reset
methods so we can common up the updates that need to happen at the end. Then we
take care to expand the thread pool to the max of the two values, set the
helper thread system's maximum parallel GC tasks setting and update all our
counts based on the actual number of threads we end up with.

Pushed by jcoppeard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/80ad3f28c6a6
Fix GC parallel marking thread count parameter r=sfink
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: