Bug 1815415 - Fix GC parallel marking thread count parameter r=sfink

This is complicated because we have two thread count values here, because we
want to be able to change the marking thread count for experiments without
changing anything else.

The patch refactors thread related GC parameters into their own set/reset
methods so we can common up the updates that need to happen at the end. Then we
take care to expand the thread pool to the max of the two values, set the
helper thread system's maximum parallel GC tasks setting and update all our
counts based on the actual number of threads we end up with.

Differential Revision: https://phabricator.services.mozilla.com/D169061