js/src/gc/GC.h
@@ -82,6 +82,7 @@ class TenuredChunk;
   _("helperThreadRatio", JSGC_HELPER_THREAD_RATIO, true)                   \
   _("maxHelperThreads", JSGC_MAX_HELPER_THREADS, true)                     \
   _("helperThreadCount", JSGC_HELPER_THREAD_COUNT, false)                  \
+  _("markingThreadCount", JSGC_MARKING_THREAD_COUNT, true)                 \
   _("systemPageSizeKB", JSGC_SYSTEM_PAGE_SIZE_KB, false)
 
 // Get the key and writability give a GC parameter name.
